# map_reduce

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  constants.h  data_piece.proto  generate.py  main.cpp  map.cpp  mapreduce.cpp  mapreduce.h  process_manager.cpp  process_manager.h  reduce.cpp  report.md  temp_files_manager.cpp  temp_files_manager.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h
buffered_io/: buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h
examples/: map.cpp  reduce.cpp  test_map_reduce.cpp
mapreduce_lib/: file_operations_manager.cpp  file_operations_manager.h  process_manager.cpp  process_manager.h  temp_files_manager.cpp  temp_files_manager.h  threadpool.cpp
utils/: constants.h  utils.cpp  utils.h
